[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprite/TinyBulletSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entity/Bullet/CurvingBullet.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[node name="CurvingBullet" type="Node2D"]
script = ExtResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TinyBulletSprite" parent="." instance=ExtResource( 1 )]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="tree_exiting" from="Hitbox" to="." method="_on_Hitbox_tree_exiting"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
